# taggle

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 42ce52fa6e09_.py  7e65265d67a5_.py
src/: database.py  main.py  models.py
src/resource/: models.py  router.py  schemas.py
src/tag/: models.py  router.py  schemas.py
